add DTO and Service

--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -23,7 +23,7 @@
                 <td>@item.Status</td>
                 <td>@item.Value</td>
                 <td>@item.Note</td>
-                <td>@item.ParentId</td>
+                <td>@item.ParentName</td>
             </tr>
         }
     </tbody>
