--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -6,21 +6,8 @@
 <div class="">
     <button type="button" class="btn btn-secondary">Edit</button>
     <button type="button" class="btn btn-secondary">Delete</button>
+    <a asp-page="./AddNewSetting" class="btn btn-secondary">Add new setting</a>
 </div>
-<table>
-    <tr id="rowToClick"><td>ClickMe</td></tr>
-    <tr id="Tr1"><td>Toggled</td></tr>
-    <tr id="Tr2"><td>Toggled</td></tr>
-    <tr id="Tr3"><td>Toggled</td></tr>
-    <tr id="Tr4"><td>Toggled</td></tr>
-    <tr id="Tr5"><td>Toggled</td></tr>
-    <tr id="rowToClick"><td>ClickMe</td></tr>
-    <tr id="Tr6"><td>Toggled</td></tr>
-    <tr id="Tr7"><td>Toggled</td></tr>
-    <tr id="Tr8"><td>Toggled</td></tr>
-    <tr id="Tr9"><td>Toggled</td></tr>
-    <tr id="Tr10"><td>Toggled</td></tr>
-</table>
 <table class="table">
     <thead>
         <tr>
@@ -84,14 +71,14 @@
                         if (item.Status == 1)
                         {
                             <form method="post">
-                                <input type="hidden" asp-for="@item.Id" />
+                                <input type="hidden" name="Id" value="@item.Id" />
                                 <input class="btn bg-danger" type="submit" value="Deactive" />
                             </form>
                         }
                         else
                         {
                             <form method="post">
-                                <input type="hidden" asp-for="@item.Id" />
+                                <input type="hidden" name="Id" value="@item.Id" />
                                 <input class="btn bg-success" type="submit" value="Active" />
                             </form>
                         }
@@ -102,6 +89,19 @@
         }
     </tbody>
 </table>
+
+<table class="table">
+    <tr id="rowToClick"><td><button class="btn-secondary">Click</button></td></tr>
+    <tr id="Tr1"><td>Toggled</td></tr>
+    <tr id="Tr2"><td>Toggled</td></tr>
+    <tr id="Tr3"><td>Toggled</td></tr>
+    <tr id="Tr4"><td>Toggled</td></tr>
+    <tr id="Tr5"><td>Toggled</td></tr>
+    
+</table>
+
+
+<script src="http://code.jquery.com/jquery-1.5.1.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
@@ -116,3 +116,7 @@
         });
     });
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
