--- a/Web-Triolingo/Pages/Shared/_Layout.cshtml
+++ b/Web-Triolingo/Pages/Shared/_Layout.cshtml
@@ -3,49 +3,159 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Web_Triolingo</title>
+    <title>@ViewData["Title"] - Triolingo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     @await RenderSectionAsync("Head", required: false)
+    <style>
+        .loading {
+            width: 100%;
+            height: 100%;
+            background: #fff;
+            opacity: .8;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            top: 0;
+        }
+
+        .navbar {
+            min-height: 70px;
+            line-height: 20px;
+            margin: auto;
+            padding: 0 24px;
+        }
+
+        .navbar-nav {
+            display: flex;
+            flex-direction: row;
+            gap: 30px;
+        }
+
+        .container {
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .side-bar {
+            margin: 24px;
+            width: 224px;
+        }
+
+        li {
+            list-style-type: none;
+        }
+
+        .side-item {
+            font-size: 15px;
+            font-weight: 700;
+            letter-spacing: .8px;
+            text-transform: uppercase;
+            list-style-type: none;
+            height: 50px;
+            border-radius: 12px;
+            padding: 4px 8px;
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+            cursor: pointer;
+            border: 2px solid transparent;
+        }
+
+            .side-item.active {
+                background-color: #ddf4ff;
+                border-color: #84d8ff;
+                color: #1cb0f6;
+            }
+
+        main {
+            width: 100%;
+        }
+
+        ul {
+            padding-inline-start: 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Web_Triolingo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
+    <div style="max-width: 1328px; margin: auto;">
+        <header>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <div class="left-navbar">
+                        <a class="navbar-brand" asp-area="" asp-page="/Index">TrioLingo</a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        </ul>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><button class="dropdown-item" type="button">Tạo hồ sơ</button></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><button class="dropdown-item" type="button">Cài đặt</button></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><button class="dropdown-item" type="button">Trợ giúp</button></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><button class="dropdown-item" type="button">Đăng nhập</button></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
+            </nav>
+
+        </header>
+
+        <div class="container">
+            <nav class="side-bar" id="side-bar">
+                <ul>
+                    <li data-item="1" class="side-item item1 active">
+                        <div>
+                            <span>Học</span>
+                        </div>
+                    </li>
+                    <li data-item="2" class="side-item item2">Cửa hàng</li>
+                    <li data-item="3" class="side-item item3">Schools</li>
+                </ul>
+            </nav>
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2023 - DemoRazor - <a asp-area="" asp-page="/Privacy">Privacy</a>
+                @await RenderSectionAsync("Noidungfooter", required: false)
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        </footer>
+    </div>
+    <div class="loading" id="loading">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - Web_Triolingo - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
+    <script>
+        (function () {
+            $('#loading').hide();
+            $('#side-bar .side-item').on('click', function () {
+                $('#side-bar .side-item').removeClass('active')
+                $(this).toggleClass('active')
+            })
+        })()
+    </script>
 </body>
 </html>
