--- a/Web-Triolingo/wwwroot/css/Login/Login.css
+++ b/Web-Triolingo/wwwroot/css/Login/Login.css
@@ -8,13 +8,14 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .formLogin {
-    width: 375px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 375px;
 }
 
     .formLogin input {
@@ -31,11 +32,40 @@
 
 .title {
     text-align: center;
+    font-size: 26px;
+    margin: 10px 0 15px;
+    font-weight: 700;
+    line-height: 40px;
+    color: rgb(60, 60, 60)
+}
+
+button {
+    border-radius: 16px;
+    line-height: 27px;
+    padding: 8px 16px;
+    box-shadow: rgba(24, 153, 214, 0.25) 0px 7px 14px, rgba(24, 153, 214, 0.22) 0px 10px 10px;
 }
 
 #loginbtn {
     width: 100%;
+    background: rgb(28, 176, 246);
+    border: none;
+    padding: 13px;
+    letter-spacing: 0.8px;
     border-radius: 16px;
-    line-height: 27px;
-    padding: 8px 16px;
 }
+
+.policy {
+    width: 375px;
+    line-height: 20px;
+    padding: 40px 0 10px 0;
+    text-align: center;
+    color: rgb(175, 175, 175);
+    font-size: 14px;
+}
+
+    .policy a {
+        color: inherit;
+        text-decoration: none;
+        background-color: transparent;
+    }
