--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -4,119 +4,191 @@
 <h1>Setting Managerment</h1>
 
 <div class="">
-    <button type="button" class="btn btn-secondary">Edit</button>
-    <button type="button" class="btn btn-secondary">Delete</button>
-    <a asp-page="./AddNewSetting" class="btn btn-secondary">Add new setting</a>
+    <button type="button" class="btn btn-secondary">Xóa</button>
+    <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        Thêm mới
+    </a>
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Thêm mới</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div>
+                <form>
+                    <div class="form-group">
+                        <label for="email">Tên</label>
+                        <input type="email" class="form-control" id="email" placeholder="nhập tên" aria-describedby="emailHelp">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Giá trị</label>
+                        <input type="password" class="form-control" id="password" placeholder="nhập giá trị">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Ghi chú</label>
+                        <input type="password" class="form-control" id="password" placeholder="nhập ghi chú">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Thêm</button>
+                </form>
+            </div>
+            <div class="dropdown mt-3">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Dropdown button
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample1" role="button" aria-controls="offcanvasExample1">
+        Edit setting
+    </a>
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample1" aria-labelledby="offcanvasExampleLabel1">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div>
+                cai nay edit
+            </div>
+            <div class="dropdown mt-3">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Dropdown button
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        All
-                    </label>
-                </div>
-            </th>
             <th>Tên</th>
             <th>Trạng thái</th>
             <th>Giá trị</th>
             <th>Ghi chú</th>
             <th>Sửa trạng thái</th>
         </tr>
-
     </thead>
     <tbody>
         @{
             int count = 1;
         }
-        @foreach (var item in Model.ListAllSettings)
-        {
-            <tr class="dropdown">
-                <td>
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        @count
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </td>
-                <td>
-                    @item.Name
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </td>
-                <td>
-                    @{
-                        if (item.Status == 1)
-                        {
-                            <span class="badge bg-success">Active</span>
+        @{
+            foreach (var item in Model.ListAllSettings)
+            {
+
+                <tr class="accoordion">
+                    <td>
+                        <form method="get" asp-page-handler="GetChild">
+                            <input type="hidden" name="Id" value="@item.Id" />
+                            <input class="btn btn-primary" type="submit" value="@count" />
+                        </form>
+                    </td>
+                    <td>@item.Name</td>
+                    <td>
+                        @{
+                            if (item.Status == 1)
+                            {
+                                <span class="badge bg-success">Active</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-danger">Deactive</span>
+                            }
                         }
-                        else
-                        {
-                            <span class="badge bg-danger">Deactive</span>
+                    </td>
+                    <td>@item.Value</td>
+                    <td>@item.Note</td>
+                    <td>
+                        @{
+                            if (item.Status == 1)
+                            {
+                                <form method="post">
+                                    <input type="hidden" name="Id" value="@item.Id" />
+                                    <input class="btn bg-danger" type="submit" value="Deactive" />
+                                </form>
+                            }
+                            else
+                            {
+                                <form method="post">
+                                    <input type="hidden" name="Id" value="@item.Id" />
+                                    <input class="btn bg-success" type="submit" value="Active" />
+                                </form>
+                            }
                         }
-                    }
-                </td>
-                <td>@item.Value</td>
-                <td>@item.Note</td>
-                <td>
-                    @{
-                        if (item.Status == 1)
-                        {
-                            <form method="post">
-                                <input type="hidden" name="Id" value="@item.Id" />
-                                <input class="btn bg-danger" type="submit" value="Deactive" />
-                            </form>
-                        }
-                        else
-                        {
-                            <form method="post">
-                                <input type="hidden" name="Id" value="@item.Id" />
-                                <input class="btn bg-success" type="submit" value="Active" />
-                            </form>
-                        }
-                    }
-                </td>
-            </tr>
-            count++;
+                    </td>
+                </tr>
+                if (Model.AllSettingsByParent != null && Model.AllSettingsByParent.Any())
+                {
+                    <tr class="panel">
+
+                        <td>
+                            <table>
+                                @{
+                                    foreach (var item2 in Model.AllSettingsByParent)
+                                    {
+                                        int count2 = 1;
+                                        <tr>
+                                            <td>@item2.Name</td>
+                                            <td>@item2.Name</td>
+                                            <td>
+                                                @{
+                                                    if (item2.Status == 1)
+                                                    {
+                                                        <span class="badge bg-success">Active</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="badge bg-danger">Deactive</span>
+                                                    }
+                                                }
+                                            </td>
+                                            <td>@item2.Value</td>
+                                            <td>@item2.Note</td>
+                                            <td>
+                                                @{
+                                                    if (item2.Status == 1)
+                                                    {
+                                                        <form method="post">
+                                                            <input type="hidden" name="Id" value="@item2.Id" />
+                                                            <input class="btn bg-danger" type="submit" value="Deactive" />
+                                                        </form>
+                                                    }
+                                                    else
+                                                    {
+                                                        <form method="post">
+                                                            <input type="hidden" name="Id" value="@item2.Id" />
+                                                            <input class="btn bg-success" type="submit" value="Active" />
+                                                        </form>
+                                                    }
+                                                }
+                                            </td>
+                                        </tr>
+                                        count++;
+                                    }
+                                }
+                            </table>
+                        </td>
+
+
+                    </tr>
+                }
+            }
         }
     </tbody>
 </table>
-
-<table class="table">
-    <tr id="rowToClick"><td><button class="btn-secondary">Click</button></td></tr>
-    <tr id="Tr1"><td>Toggled</td></tr>
-    <tr id="Tr2"><td>Toggled</td></tr>
-    <tr id="Tr3"><td>Toggled</td></tr>
-    <tr id="Tr4"><td>Toggled</td></tr>
-    <tr id="Tr5"><td>Toggled</td></tr>
-    
-</table>
-
-
-<script src="http://code.jquery.com/jquery-1.5.1.min.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-
-    $(document).ready(function () {
-        $('#rowToClick').click(function () {
-            $(this).nextAll('tr').each(function () {
-                if ($(this).is('#rowToClick')) {
-                    return false;
-                }
-                $(this).toggle();
-            });
-        });
-    });
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
+@section Head{
+    <link rel="stylesheet" href="~/css/Settings/SettingStyle.css" />
+}
+@section Scripts{
+    <script src="~/js/Settings/Settings.js"></script>
+}
