--- a/Web-Triolingo/Pages/Shared/_Layout.cshtml
+++ b/Web-Triolingo/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Triolingo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     @await RenderSectionAsync("Head", required: false)
     <style>
@@ -124,6 +125,7 @@
                     </li>
                     <li data-item="2" class="side-item item2">Cửa hàng</li>
                     <li data-item="3" class="side-item item3">Schools</li>
+                    <li data-item="4" class="side-item item4"><a style="text-decoration: none" asp-page="/Settings/SettingList">Quản lý cài đặt</a></li>
                 </ul>
             </nav>
             <main role="main" class="pb-3">
