--- a/Web-Triolingo/Pages/Shared/Login.cshtml
+++ b/Web-Triolingo/Pages/Shared/Login.cshtml
@@ -23,7 +23,7 @@
                 <input name="Age" class="form-control login-input" placeholder="Nhập Tuổi" />
             </div>
             <div class="form-group">
-                <input name="Name" class="form-control login-input" placeholder="Nhập Tên (tùy chọn)" />
+                <input name="FullName" class="form-control login-input" placeholder="Nhập Tên (tùy chọn)" />
             </div>
             <div class="form-group">
                 <input name="Email" class="form-control login-input" placeholder="Nhập Email" />
