Question and Answer: create service and demo form Course: Create a link to redirect to another page in another folder with param

--- a/Web-Triolingo/Pages/QnA/Index.cshtml
+++ b/Web-Triolingo/Pages/QnA/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@addTagHelper *, Microsoft.AspNetCore.MVC.TagHelpers
-@model Web_Triolingo.Pages.Courses.CourseListModel
+@model Web_Triolingo.Pages.QnA.IndexModel
 @{
-    ViewData["Title"] = "Quản lý khóa học";
+@{
+    ViewData["Title"] = "Quản lý câu hỏi và bài tập";
 }
-    <h2 class="text-uppercase">Quản lý khóa học</h2>
+    <h2 class="text-uppercase">Quản lý câu hỏi và bài tập</h2>
     <div class="row p-0">
         <div class="col-md-4 col-12">
             <div class="card">
